--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                 <span>Technology</span> - &nbsp;&nbsp;<a href="#">HTML CSS JavaScript Bootstrap</a><br>
                                 <span>Created</span> - &nbsp;&nbsp;<a href="#">15 June 2021</a><br>
                                 <span>Watch Live</span> - &nbsp;&nbsp;<a
-                                    href="./assets/portfolio/Portfolio 3/index.html">Click hero for live demo</a><br>
+                                    href="https://dkhan786-web.github.io/Portfolio-2/">Click hero for live demo</a><br>
                                 <span>Source Code</span> - &nbsp;&nbsp;<a href="https://github.com/dkhan786-web">Click
                                     hero for download source code</a><br>
                             </div>
