--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <div class="portfolio-item-thumbnail">
                             <img src="./images/Portfolio/port-6.png" alt="portfolio item thumb">
                         </div>
-                        <h3 class="portfolio-item-title">St. Michael High School</h3>
+                        <h3 class="portfolio-item-title">Coral Coast International School</h3>
                         <button type="button" class="view-project-btn">View Project</button>
                         <div class="portfolio-item-details">
                             <div class="description">
@@ -210,9 +210,9 @@
 
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="./images/Portfolio/port-4.png" alt="portfolio item thumb">
+                            <img src="./images/Portfolio/port-7.png" alt="portfolio item thumb">
                         </div>
-                        <h3 class="portfolio-item-title">Iqbweb (Portfolio)</h3>
+                        <h3 class="portfolio-item-title">C3 Ftness Club</h3>
                         <button type="button" class="view-project-btn">View Project</button>
                         <div class="portfolio-item-details">
                             <div class="description">
