--- a/index.html
+++ b/index.html
@@ -225,12 +225,12 @@
                                     eveniet labore assumenda, sunt culpa.</p>
                             </div>
                             <div class="general-info">
-                                <ul>
-                                    <li>Created - <span>4 Dec 2020</span></li>
-                                    <li>Created - <span>$ Dec 2020</span></li>
-                                    <li>Created - <span>$ Dec 2020</span></li>
-                                    <li>Created - <span>$ Dec 2020</span></li>
-                                </ul>
+                                <span>Technology</span> - &nbsp;&nbsp;<a href="#">HTML CSS JavaScript Bootstrap</a><br>
+                                <span>Created</span> - &nbsp;&nbsp;<a href="#">15 June 2021</a><br>
+                                <span>Watch Live</span> - &nbsp;&nbsp;<a
+                                    href="https://dkhan786-web.github.io/portfolio3/">Click hero for live demo</a><br>
+                                <span>Source Code</span> - &nbsp;&nbsp;<a href="https://github.com/dkhan786-web">Click
+                                    hero for download source code</a><br>
                             </div>
                         </div>
                     </div>
