--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
                     </div>
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="./images/Portfolio/port-4.png" alt="portfolio item thumb">
+                            <img src="./images/Portfolio/port-8.png" alt="portfolio item thumb">
                         </div>
-                        <h3 class="portfolio-item-title">Iqbweb (Portfolio)</h3>
+                        <h3 class="portfolio-item-title">Toppings Pizza</h3>
                         <button type="button" class="view-project-btn">View Project</button>
                         <div class="portfolio-item-details">
                             <div class="description">
@@ -251,12 +251,12 @@
                                     eveniet labore assumenda, sunt culpa.</p>
                             </div>
                             <div class="general-info">
-                                <ul>
-                                    <li>Created - <span>4 Dec 2020</span></li>
-                                    <li>Created - <span>$ Dec 2020</span></li>
-                                    <li>Created - <span>$ Dec 2020</span></li>
-                                    <li>Created - <span>$ Dec 2020</span></li>
-                                </ul>
+                                <span>Technology</span> - &nbsp;&nbsp;<a href="#">HTML CSS JavaScript Bootstrap</a><br>
+                                <span>Created</span> - &nbsp;&nbsp;<a href="#">15 June 2021</a><br>
+                                <span>Watch Live</span> - &nbsp;&nbsp;<a
+                                    href="https://dkhan786-web.github.io/portfolio4/">Click hero for live demo</a><br>
+                                <span>Source Code</span> - &nbsp;&nbsp;<a href="https://github.com/dkhan786-web">Click
+                                    hero for download source code</a><br>
                             </div>
                         </div>
                     </div>
